[tool.poetry]
name = "python-task-queue"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pika = "^1.3.2"
peewee = "^3.17.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.example.dependencies]
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
pdfminer-six = "^20221105"
uvicorn = "^0.24.0.post1"
python-magic = "^0.4.27"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
